# sr

./: README.md  index.html  init.txt  package.json  tsconfig.json  vite.config.js  windi.config.js
.github/workflows/: deploy.yml  pages.yml
api/: .rustfmt.toml  Cargo.toml  Procfile  README.md  init_db.py  rust-toolchain.toml  tests.py
api/migrations/: 20220210201041_init.sql
api/src/: error.rs  lib.rs  main.rs
api/src/client/: mod.rs
api/src/client/youtube/: mod.rs  schema.rs
api/src/client/ytv3/: mod.rs  schema.rs
api/src/common/: config.rs  mod.rs  platform.rs
api/src/common/util/: loose_bool.rs  mod.rs  query_ext.rs
api/src/db/: mod.rs  playlists.rs  songs.rs
api/src/v1/: memo.rs  mod.rs  playlist.rs  random.rs  search.rs
api/tests/: health.rs
assets/: Player.887014b3.js  index.39d36b42.css  index.7df3fbc2.js  vendor.fa65c9af.js
public/: CNAME
src/: App.svelte  Footer.svelte  Header.svelte  main.ts  player.ts  util.ts
src/lib/: Icon.svelte  Link.svelte  Logo.svelte  index.ts
ui/: .prettierrc  README.md  package.json  tsconfig.json
ui/src/: App.svelte  api.ts  command.ts  main.ts  player.ts  playlist.ts  twitch.ts  util.ts
ui/src/lib/: YoutubePlayer.svelte  ytapi.ts
ui/src/views/: Home.svelte  Player.svelte
