[package]
name = "api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
warp = "0.3"
log = "0.4.14"
env_logger = "0.9.0"
anyhow = "1.0.44"
rand = "0.8.4"
bytes = "1.1.0"
